# pynetgen

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
pynetgen/: __init__.py  netgen.py  pynetgen.py  pyvenv.cfg
pynetgen/util/: __init__.py  ilist.py  network.py  random.py
src/pynetgen/: __init__.py  _version.py  pynetgen.py
src/pynetgen/util/: __init__.py  ilist.py  randit.py  random.py
