[metadata]
name = pynetgen
version = 0.0.1
author = Adam Rumpf
author_email = arumpf@floridapoly.edu
description = A Python implementation of NETGEN, a random network flows problem instance generator.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/adam-rumpf/pynetgen
project_urls =
    Source = https://github.com/adam-rumpf/pynetgen
    Bug Tracker = https://github.com/adam-rumpf/pynetgen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    Natural Language :: English
keywords = netgen, network flows, operations research, problem instances, graph theory, math

[options.entry_points]
console_scripts =
    pynetgen = pynetgen.pynetgen:main
