[metadata]
name = pynetgen
version = attr: pynetgen._version.__version__
author = Adam Rumpf
author_email = arumpf@floridapoly.edu
description = A Python implementation of the NETGEN random network flows problem instance generator.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
url = https://github.com/adam-rumpf/pynetgen
project_urls =
    Source = https://github.com/adam-rumpf/pynetgen
    Bug Tracker = https://github.com/adam-rumpf/pynetgen/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    Natural Language :: English
keywords =
    netgen
    network flows
    operations research
    problem instances
    math
    graph theory

[options]
package_dir =
    = src
packages = find:
python_requires =
    >= 3.7
setup_requires =
    setuptools >= 51

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pynetgen = pynetgen:main
